# notes

./: Cargo.toml  README.md
src/: main.rs  notes.rs
