[package]
name = "notes"
version = "0.1.0"
authors = ["Tanmay Chaudhry <tanmay.chaudhry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "1.0"
getopts = "0.2"
serde = "1.0"
rand = "0.7.2"
env_logger = "0.7.0"

[dependencies.redis]
version = "*"